k8s/apps/notifyops/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notifyops-service
  namespace: notifyops
  labels:
    app: notifyops
    component: backend
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "9090"
    prometheus.io/path: "/metrics"
spec:
  type: ClusterIP
  ports: 
  - name: http
    port: 8080
    targetPort: 8080
    protocol: TCP
    appProtocol: http
  - name: metrics
    port: 9090
    targetPort: 9090
    protocol: TCP
    appProtocol: http
  selector:
    app: notifyops
    component: backend
  sessionAffinity: None
